--- a/.github/workflows/IPTV.yml
+++ b/.github/workflows/IPTV.yml
@@ -1,48 +1,56 @@
-name: Update
+# This is a basic workflow to help you get started with Actions
+
+name: UpdateIPTV
 
 on:
-  watch:
-    types: [started]
+#  workflow_dispatch
   schedule:
-    - cron: 0,30 * * * *
-
-env:
-  TZ: Asia/Shanghai
-
+  - cron: "0,30 * * * *"
+    
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   Update:
     runs-on: ubuntu-latest
-    steps:
+    steps:    
+    - name: Set up Go # 设置Go环境
+      uses: actions/setup-go@v1
+      with:
+        go-version: '^1.19' # 指定所需的Go版本
+          
     - name: Checkout
       uses: actions/checkout@v3
 
     - name: GetTime
       id: date
-      run: echo "::set-output name=date::$(date +'%Y-%m-%d %H:%M:%S CST')"
-
-    - name: Update
       run: |
+        sudo cp /etc/localtime /etc/localtime.bak
+        sudo ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
+        echo "::set-output name=date::$(date +'%Y-%m-%d %H:%M:%S CST')"
+
+    - name: 更新
+      run: |
+        # 获取直播源
+        wget https://raw.githubusercontent.com/fanmingming/live/main/tv/m3u/ipv6.m3u -O ipv6.m3u
+        wget https://raw.githubusercontent.com/Meroser/IPTV/main/IPTV.m3u -O meroser.m3u
+        
         # 央视源
-        rm -f CCTV.m3u && touch CCTV.m3u
-        wget https://raw.githubusercontent.com/fanmingming/live/main/tv/m3u/ipv6.m3u -O CCTV-1.m3u && sed -i -n '/央视频道/,+1p' CCTV-1.m3u
-        wget https://raw.githubusercontent.com/Meroser/IPTV/main/IPTV.m3u -O CCTV-2.m3u && sed -i -n '/央视/,+1p' CCTV-2.m3u
-        cat CCTV-1.m3u >> CCTV.m3u
-        cat CCTV-2.m3u >> CCTV.m3u
-        rm -f CCTV-1.m3u CCTV-2.m3u
+        rm -f CCTV.m3u
+        sed -n -e 's/央视频道/央视/g' -e '/央视/,+1p' ipv6.m3u > CCTV.m3u
         sed -i '1i #EXTM3U' CCTV.m3u
         sed -i '/^\s*$/d' CCTV.m3u
 
         # 卫视源
         rm -f CNTV.m3u && touch CNTV.m3u
-        wget https://raw.githubusercontent.com/fanmingming/live/main/tv/m3u/ipv6.m3u -O CNTV1.m3u && sed -i -n '/卫视频道/,+1p' CNTV1.m3u
-        wget https://raw.githubusercontent.com/fanmingming/live/main/tv/m3u/ipv6.m3u -O CNTV2.m3u && sed -i -n '/NewTV系列/,+1p' CNTV2.m3u
-        wget https://raw.githubusercontent.com/fanmingming/live/main/tv/m3u/ipv6.m3u -O CNTV3.m3u && sed -i -n '/超清频道/,+1p' CNTV3.m3u
-        wget https://raw.githubusercontent.com/fanmingming/live/main/tv/m3u/ipv6.m3u -O CNTV4.m3u && sed -i -n '/赛事直播/,+1p' CNTV4.m3u
-        wget https://raw.githubusercontent.com/fanmingming/live/main/tv/m3u/ipv6.m3u -O CNTV4.m3u && sed -i -n '/求索系列/,+1p' CNTV5.m3u
-        wget https://raw.githubusercontent.com/Meroser/IPTV/main/IPTV.m3u -O CNTV6.m3u && sed -i -n '/卫视/,+1p' CNTV6.m3u
-        wget https://raw.githubusercontent.com/Meroser/IPTV/main/IPTV.m3u -O CNTV7.m3u && sed -i -n '/NewTV/,+1p' CNTV7.m3u
-        wget https://raw.githubusercontent.com/Meroser/IPTV/main/IPTV.m3u -O CNTV8.m3u && sed -i -n '/数字/,+1p' CNTV8.m3u
-        wget https://raw.githubusercontent.com/Meroser/IPTV/main/IPTV.m3u -O CNTV9.m3u && sed -i -n '/国际/,+1p' CNTV9.m3u
+        sed -n -e 's/卫视频道/卫视/g' -e '/卫视/,+1p' ipv6.m3u > CNTV1.m3u
+        sed -n -e 's/NewTV系列/数字/g' -e '/数字/,+1p' ipv6.m3u > CNTV2.m3u
+        sed -n -e 's/超清频道/数字/g' -e '/数字/,+1p' ipv6.m3u > CNTV3.m3u
+        sed -n -e 's/赛事直播/数字/g' -e '/数字/,+1p' ipv6.m3u > CNTV4.m3u
+        sed -n -e 's/NewTV/数字/g' -e '/数字/,+1p' ipv6.m3u > CNTV5.m3u
+        sed -n -e 's/数字/数字/g' -e '/数字/,+1p' ipv6.m3u > CNTV6.m3u
+        sed -n -e 's/数字/数字/g' -e '/数字/,+1p' ipv6.m3u > CNTV7.m3u
+        sed -n -e 's/求索系列/数字/g' -e '/数字/,+1p' ipv6.m3u > CNTV8.m3u
+        sed -n -e 's/国际/数字/g' -e '/数字/,+1p' ipv6.m3u > CNTV9.m3u
+        sed -n -e 's/咪咕/数字/g' -e '/数字/,+1p' ipv6.m3u > CNTV10.m3u
         cat CNTV1.m3u >> CNTV.m3u
         cat CNTV2.m3u >> CNTV.m3u
         cat CNTV3.m3u >> CNTV.m3u
@@ -52,45 +60,48 @@ jobs:
         cat CNTV7.m3u >> CNTV.m3u
         cat CNTV8.m3u >> CNTV.m3u
         cat CNTV9.m3u >> CNTV.m3u
-        rm -f CNTV1.m3u CNTV2.m3u CNTV3.m3u CNTV4.m3u CNTV5.m3u CNTV6.m3u CNTV7.m3u CNTV8.m3u CNTV9.m3u
+        cat CNTV10.m3u >> CNTV.m3u
+        rm -f CNTV1.m3u CNTV2.m3u CNTV3.m3u CNTV4.m3u CNTV5.m3u CNTV6.m3u CNTV7.m3u CNTV8.m3u CNTV9.m3u CNTV10.m3u
         sed -i '1i #EXTM3U' CNTV.m3u
         sed -i '/^\s*$/d' CNTV.m3u
 
-        # 地方源
-        rm -f DDTV.m3u && touch DDTV.m3u
-        wget https://raw.githubusercontent.com/Meroser/IPTV/main/IPTV.m3u -O DDTV1.m3u && sed -i -n '/地方/,+1p' DDTV1.m3u
-        wget https://raw.githubusercontent.com/fanmingming/live/main/tv/m3u/ipv6.m3u -O DDTV2.m3u && sed -i -n '/浙江频道/,+1p' DDTV2.m3u
-        wget https://raw.githubusercontent.com/fanmingming/live/main/tv/m3u/ipv6.m3u -O DDTV3.m3u && sed -i -n '/陕西频道/,+1p' DDTV3.m3u
-        wget https://raw.githubusercontent.com/Meroser/IPTV/main/IPTV.m3u -O DDTV4.m3u && sed -i -n '/湖南/,+1p' DDTV4.m3u
-        cat DDTV1.m3u >> DDTV.m3u
-        cat DDTV2.m3u >> DDTV.m3u
-        cat DDTV3.m3u >> DDTV.m3u
-        cat DDTV4.m3u >> DDTV.m3u
-        rm -f SPTV1.m3u SPTV2.m3u SPTV3.m3u SPTV4.m3u
-        sed -i '1i #EXTM3U' SPTV.m3u
-        sed -i '/^\s*$/d' SPTV.m3u
+        # 5i
+        rm -f 5i.m3u && touch 5i.m3u
+        sed -n -e 's/NewTV系列/数字/g' -e '/数字/,+1p' ipv6.m3u > 5i02.m3u
+        sed -n -e '/group-title="数字"/,+1p' meroser.m3u > 5i03.m3u
+        sed -n -e 's/卫视频道/卫视/g' -e '/tvg-id="凤凰/,+1p' ipv6.m3u > 5i01.m3u
+        sed -i -n '/地方/地方/g' -e '/地方/,+1p' ipv6.m3u > 5i04.m3u
+        sed -i -n '/浙江频道/地方/g' -e '/地方/,+1p' ipv6.m3u > 5i05.m3u
+        sed -i -n '/陕西频道/地方/g' -e '/地方/,+1p' ipv6.m3u > 5i06.m3u
+        sed -i -n '/湖南/地方/g' -e '/地方/,+1p' ipv6.m3u > 5i07.m3u
+        cat 5i01.m3u >> 5i.m3u
+        cat 5i02.m3u >> 5i.m3u
+        cat 5i03.m3u >> 5i.m3u
+        cat 5i04.m3u >> 5i.m3u
+        cat 5i05.m3u >> 5i.m3u
+        cat 5i06.m3u >> 5i.m3u
+        cat 5i07.m3u >> 5i.m3u
+        rm -f 5i01.m3u 5i02.m3u 5i03.m3u 5i04.m3u 5i05.m3u 5i06.m3u 5i06.m3u meroser.m3u
+        sed -i '/^\s*$/d' 5i.m3u
 
-        # 咪咕源
-        rm -f MGTV.m3u && touch MGTV.m3u
-        wget https://raw.githubusercontent.com/Meroser/IPTV/main/IPTV.m3u -O MGTV.m3u && sed -i -n '/咪咕/,+1p' MGTV.m3u
-        cat MGTV.m3u >> SPTV.m3u
-        rm -f MGTV.m3u
-        sed -i '1i #EXTM3U' MGTV.m3u
-        sed -i '/^\s*$/d' MGTV.m3u
-        
         # 整合源
         rm -f IPTV.m3u && touch IPTV.m3u
         cat CCTV.m3u >> IPTV.m3u
         cat CNTV.m3u >> IPTV.m3u
-        cat DDTV.m3u >> IPTV.m3u
-        cat MGTV.m3u >> IPTV.m3u
+        cat 5i.m3u >> IPTV.m3u
         sed -i '/#EXTM3U/d' IPTV.m3u
         sed -i '1i #EXTM3U' IPTV.m3u
         sed -i '/^\s*$/d' IPTV.m3u
 
         # 节目源
+        rm -f 5i.xml
         rm -f EPG.xml && wget https://epg.112114.xyz/pp.xml -O EPG.xml
-        echo "Auto Update IPTV in ${{ steps.date.outputs.date }}" > README.md
+        rm -f meroser.xml && wget https://raw.githubusercontent.com/Meroser/IPTV/main/tvxml.xml -O meroser.xml
+        awk -F'tvg-id="' '/tvg-name/ {print $2}' 5i.m3u | awk -F'"' '/tvg-name=/ {print $2}' 5i.m3u >> channel_list.log
+        go mod download
+        go run main.go
+        rm -f channel_list.log ipv6.m3u temp.m3u meroser.xml
+        echo "Auto Update IPTV in ${{ steps.date.outputs.date }} 修改自Moexin/IPTV" > README.md
 
     - name: Clean
       run: |
@@ -99,8 +110,8 @@ jobs:
         git checkout --orphan latest_branch
         git add -A
         git commit -am "${{ steps.date.outputs.date }}"
-        git branch -D Files
-        git branch -m Files
+        git branch -D main
+        git branch -m main
 
     - name: Push
-      run: git push -f origin Files
+      run: git push -f origin main
