--- a/.github/workflows/epg.yml
+++ b/.github/workflows/epg.yml
@@ -12,7 +12,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: EPG Update
       run: |
-        rm -f e.xml && wget https://epg.112114.xyz/pp.xml -O EPG.xml
+        rm -f e.xml && wget https://epg.erw.cc/e.xml -O EPG.xml
         git config --global user.name ClodQiu
         git config --global user.email gougoo@petalmail.com
         git add e.xml
