--- a/.github/workflows/epg.yml
+++ b/.github/workflows/epg.yml
@@ -14,7 +14,7 @@ jobs:
       run: |
         rm -f e.xml && wget https://epg.112114.xyz/pp.xml -O e.xml
         git config --global user.name ClodQiu
-        git config --global user.email gougoo@petalmail.com
+        git config --global user.email mingming@live.com
         git add e.xml
         git commit -m "Update e.xml"
         git push -f origin main
