--- a/.github/workflows/EPG.yml
+++ b/.github/workflows/EPG.yml
@@ -12,9 +12,9 @@ jobs:
     - uses: actions/checkout@v3
     - name: EPG Update
       run: |
-        rm -f EPG.xml && wget https://epg.112114.xyz/pp.xml -O EPG.xml
+        rm -f e.xml && wget https://epg.112114.xyz/pp.xml -O e.xml
         git config --global user.name 0sty
-        git config --global user.email gougoo2010@gmai.com
+        git config --global user.email 3021442078@qq.com
         git add e.xml
-        git commit -m "Update EPG.xml"
-        git push -f origin Grey
+        git commit -m "Update e.xml"
+        git push -f origin main
